align fix 1

--- a/style.scss
+++ b/style.scss
@@ -108,16 +108,19 @@ a
 }
 
 
-
+.planetsimages
+{
+  display: inline-block;
+}
 
 #planetlink1
 {
+  text-align: center;
   display: inline-block;
   height: 150px;
   opacity: 0.5;
   width: 130px;
-  top: -60px;
-  left: 20%;
+
   margin: 10px;
   transition: opacity .4s, height .4s, width .4s, left .4s, top .4s;
   position: relative;
@@ -129,10 +132,8 @@ a
 
   &:hover
   {
-    top: -70px;
-    height: 230px;
-    width: 300px;
-    left: 15%;
+    height: 250px;
+    width: 250px;
     opacity: 1;
   }
 
@@ -154,8 +155,7 @@ a
   height: 150px;
   opacity: 0.5;
   width: 150px;
-  top: -60px;
-  left: 20%;
+
   margin: 10px;
   transition: opacity .4s, height .4s, width .4s, left .4s, top .4s;
   position: relative;
@@ -167,11 +167,10 @@ a
 
   &:hover
   {
-    top: -70px;
-    height: 230px;
-    width: 300px;
-    left: 15%;
-      opacity: 1;
+
+    height: 250px;
+    width: 250px;
+    opacity: 1;
   }
 
   &:hover > #planet2span
@@ -226,8 +225,9 @@ a
 }
 .imagelinks
 {
-  position: relative;
-  left: 13%;
+  width: 100%;
+  text-align: center;
+
 }
 //---------------------------------------------------------------------------------------------
 //---------------------------------------------------------------------------------------------
@@ -269,11 +269,7 @@ a
   top: -180px;
   position: relative;
 }
-.imagelinks
-{
-  position: relative;
-  left: 13%;
-}
+
 //---------------------------------------------------------------------------------------------
 #planetlink3
 {
@@ -281,8 +277,6 @@ a
   height: 150px;
   opacity: 0.5;
   width: 150px;
-  top: -60px;
-  left: 20%;
   margin: 10px;
   transition: opacity .4s, height .4s, width .4s, left .4s, top .4s;
   position: relative;
@@ -294,10 +288,8 @@ a
 
   &:hover
   {
-    top: -70px;
-    height: 230px;
-    width: 300px;
-    left: 15%;
+    height: 250px;
+    width: 250px;
     opacity: 1;
   }
 
@@ -558,11 +550,7 @@ a
   color: #F7F9E0
 }
 
-#facebookpic
-{
-  position: relative;
-  left: 43%;
-}
+
 
 #invisiblebox
 {
